Add Nginx configuration for SSL and update Docker Compose for worker connections

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -2,14 +2,32 @@ events {}
 
 http {
     upstream kong_upstream {
-        server kong1:8000;
-        server kong2:8000;
+        server kong1:8000 max_fails=1 fail_timeout=3s;
+        server kong2:8000 max_fails=1 fail_timeout=3s;
     }
 
     server {
         listen 80;
 
         location / {
+            proxy_connect_timeout 2s;
+            proxy_send_timeout 2s;
+            proxy_read_timeout 2s;
+            proxy_next_upstream error timeout http_502 http_503 http_504;
+            proxy_pass http://kong_upstream;
+        }
+    }
+
+    server {
+        listen 443 ssl;
+        ssl_certificate /certs/localhost.crt;
+        ssl_certificate_key /certs/localhost.key;
+
+        location / {
+            proxy_connect_timeout 2s;
+            proxy_send_timeout 2s;
+            proxy_read_timeout 2s;
+            proxy_next_upstream error timeout http_502 http_503 http_504;
             proxy_pass http://kong_upstream;
         }
     }
