--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - KONG_ADMIN_ERROR_LOG=/dev/stderr
       - KONG_ADMIN_LISTEN=0.0.0.0:8001, 0.0.0.0:8444 ssl
       - KONG_LOG_LEVEL=debug
+      - KONG_WORKER_CONNECTIONS=1024
       - KONG_PLUGINS=bundled
       - KONG_SSL_CERT=/certs/localhost.crt
       - KONG_SSL_CERT_KEY=/certs/localhost.key
@@ -36,6 +37,7 @@ services:
       - KONG_ADMIN_ERROR_LOG=/dev/stderr
       - KONG_ADMIN_LISTEN=0.0.0.0:8001, 0.0.0.0:8444 ssl
       - KONG_LOG_LEVEL=debug
+      - KONG_WORKER_CONNECTIONS=1024
       - KONG_PLUGINS=bundled
       - KONG_SSL_CERT=/certs/localhost.crt
       - KONG_SSL_CERT_KEY=/certs/localhost.key
@@ -47,8 +49,10 @@ services:
     container_name: kong-lb
     volumes:
       - ./config/nginx.conf:/etc/nginx/nginx.conf
+      - ./certs:/certs
     ports:
       - "8080:80"
+      - "8443:443"
     networks:
       - kong-net
     depends_on:
